# parallel-pandas

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: git-workflow.mdc
.github/: FUNDING.yml
.github/workflows/: publish.yml  tests.yml
parallel_pandas/: __init__.py  main.py
parallel_pandas/core/: __init__.py  _numba.py  accessor.py  parallel_dataframe.py  parallel_groupby.py  parallel_series.py  parallel_str_dt.py  parallel_window.py  progress_imap.py  tools.py
tests/: conftest.py  test_accessor.py  test_apply_corr.py  test_apply_globals.py  test_auto_chunk.py  test_dataframe_stats.py  test_groupby.py  test_groupby_agg.py  test_groupby_transform.py  test_pivot_table.py  test_progress_logger.py  test_str_dt.py  test_warm_pool.py  test_window.py
